LPA-1503 Inactive action links fixed, disabling details dropdown on list view on mobile

--- a/service-front/assets/sass/patterns/_search-results.scss
+++ b/service-front/assets/sass/patterns/_search-results.scss
@@ -396,6 +396,7 @@
 			}
 		}
 		.lpa-manage {
+			position: relative;
 			float: none;
 			font-size: 16px;
 			margin-top: $gutter-half;
